s/bn_make_pnt_3planes/bg_make_pnt_3planes/g
s/bn_isect_line3_plane/bg_isect_line3_plane/g
s/bn_isect_2planes/bg_isect_2planes/g
s/bn_isect_2lines/bg_isect_2lines/g
s/bn_isect_line_lseg/bg_isect_line_lseg/g
s/bn_dist_line3_pnt3/bg_dist_line3_pnt3/g
s/bn_distsq_line3_pnt3/bg_distsq_line3_pnt3/g
s/bn_dist_line_origin/bg_dist_line_origin/g
s/bn_dist_line2_point2/bg_dist_line2_point2/g
s/bn_distsq_line2_point2/bg_distsq_line2_point2/g
s/bn_area_of_triangle/bg_area_of_triangle/g
s/bn_isect_pnt_lseg/bg_isect_pnt_lseg/g
s/bn_dist_pnt_lseg/bg_dist_pnt_lseg/g
s/bn_rotate_bbox/bg_rotate_bbox/g
s/bn_rotate_plane/bg_rotate_plane/g
s/bn_coplanar/bg_coplanar/g
s/bn_angle_measure/bg_angle_measure/g
s/bn_dist_pnt3_along_line3/bg_dist_pnt3_along_line3/g
s/bn_dist_pnt2_along_line2/bg_dist_pnt2_along_line2/g
s/bn_between/bg_between/g
s/bn_does_ray_isect_tri/bg_does_ray_isect_tri/g
s/bn_hlf_class/bg_hlf_class/g
s/bn_isect_planes/bg_isect_planes/g
s/bn_plane_pt_nrml/bg_plane_pt_nrml/g
s/bn_fit_plane/bg_fit_plane/g
s/bn_plane_closest_pt/bg_plane_closest_pt/g
s/bn_plane_pt_at/bg_plane_pt_at/g
s/BN_CLASSIFY/BG_CLASSIFY/g
        plane.h moved from libbn to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/plot3\.h/\1bview\/plot3.h/g
        moved plot3.h header [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vert_tree\.h/\1bg\/vert_tree.h/g
        moved vert_tree.h header [7.32]
s/bn_vert_tree/bg_vert_tree/g
        moved vert_tree to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vectfont\.h/\1bview\/vectfont.h/g
        moved vertfont.h header to bview[7.32]
s/ID_MATERIAL/ID_COLORTAB/g
        renamed to make room for material objects [7.32]
s/loop_g/loop_a/g
s/LOOP_G/LOOP_A/g
s/->lg_p/->la_p/g
s/GED_OK/BRLCAD_OK/g
s/GED_ERROR/BRLCAD_ERROR/g
s/GED_HELP/BRLCAD_HELP/g
s/GED_MORE/BRLCAD_MORE/g
s/GED_UNKNOWN/BRLCAD_UNKNOWN/g
s/dm_draw_display_list/dm_draw_head_dl/g
s/dm_draw_obj\(/dm_draw_display_list\(/g
s/bu_whereis\(/bu_whence\(/g
s/bu_which\(/bu_whence\(/g